--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--阿里云短信服务-->
         <dependency>
             <groupId>com.aliyun</groupId>
