--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
       url: jdbc:mysql://localhost:3306/quick_eat_db
       username: root
       password: Ymm12345
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
